# febid-tools

./: .gitignore  .gitmodules  Gyroid-3x3x2-300nm.stl  Gyroid-4x4x3.stl  README.md  TestStreamOutput.str  branchtrio_3x-GR250-127.7s.str  dithered-newgyr-r402.str  f4mine-build.ipynb  kernelsandbox.py  model_to_numpy.py  sandbox.py  stream_editor.py  strmaker.py
f4mine/: BranchTrio-orig.npz  TripleBendStructure.stl  __init__.py  branchtrio-SizedUp.stl  dithered-gyr-r40-height_corr.str  dithered-newgyr-r30.str  dithered-newgyr-r402.str  dithered-newgyr2.str  dwell.py  kernel.py  model-noresistance.py  model.py  modelf3ast.py  pyproject.toml  sem.py  stream.py  stream_analyzer.py  structure copy 2.py  structure-wip.py  structure.py  structure_kernel.py  testfile.str.str
f4mine/archive/: structure copy.py
f4mine/examples/: compensation_tools.py  stream_analyzer.py
f4mine/streams/: 200gr_125k_4sig_untitled-3x3x3-singlegyroid-NewEquation2_50x.str  ThreeLeg45Deg-GR225-64p6s.str  ThreeLeg45Deg-GR225-Condensed-i1000-r30.str  ThreeLeg45Deg-GR225-Condensed-i400-r30.str  ThreeLegTestFile-v2.str  dithered-gyr-r40.str  dithered-gyroid.str  dithered-newgyr-r30.str  dithered-stream.str  dithered-tet-r40.str  dithered-tet2.str  dithered-tet3-r05.str  dithered-tet3-r20.str  testfilename.str
